docker-registry/registry_05_create_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    certmanager.k8s.io/issuer: acme-issuer
spec:
  tls:
  - hosts:
    - $TLS_HOST
    secretName: docker-registry-tls-certificate
  rules:
  - host: $RULE_HOST
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
